k8s/service.yaml


apiVersion: v1
kind: Service
metadata:
  name: task-api-service
spec:
  type: LoadBalancer
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
